test/types/records/recursive/concrete-tuple.good
concrete-tuple.chpl:2: error: tuple '3*R' cannot contain recursive record type 'R'
