test/types/records/recursive/concrete-tuple.chpl

record R {
  var x : (R, R, R);
}

var r = new R();
